--- a/email/email_party.html
+++ b/email/email_party.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="utf8"/>
+    <meta name="viewport" content="width=device-width"/>
+</head>
 <html lang="fr">
 <body>
+    <style>
+        html, body, div,
+        h1, h2, h3, h4, h5, h6, p, span,
+        table, thead, tbody, tr, th, td,
+        ul, ol, li, a, img {
+            margin: 0;
+            padding: 0;
+        }
 
-<strong>Let's party</strong>
+        table, table td {
+            border: 1px solid black;
+        }
+        .container {
+            width: 100%;
+            /*display: flex;
+            justify-content: center;*/
+            font-family: Arial;
+        }
+        .header {
+            height: 400px;
+            background: no-repeat center/cover url("../img/background_opt.jpg");
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            text-align: right;
+            padding: 15px;
+        }
+        .header div {
 
+        }
+    </style>
+
+<table class="container">
+    <tr>
+        <td class="header">
+            <div style="width: 100%; max-width: 700px;">
+                <p style="font-family: 'Arial Black'; font-size: 60px; line-height: 1;">XMAS PARTY</p>
+                <p style="font-size: 30px; padding-top: 15px;">Jeu. 19 déc. à GAP</p>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td></td>
+    </tr>
+</table>
 
 </body>
 </html>
