--- a/email/email_party.html
+++ b/email/email_party.html
@@ -113,7 +113,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto"><use xlink:href="#map"</svg>
+                                        <svg class="picto"><use xlink:href="#map"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -127,7 +127,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto"><use xlink:href="#play"</svg>
+                                        <svg class="picto"><use xlink:href="#play"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -139,7 +139,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto"><use xlink:href="#map"</svg>
+                                        <svg class="picto"><use xlink:href="#map"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -238,7 +238,7 @@
                         </table>
                     </td>
                 </tr>
-
+            </table>
         </td>
     </tr>
 </table>
