--- a/email/email_party.html
+++ b/email/email_party.html
@@ -66,6 +66,7 @@
                 width: 700px;
                 position: relative;
                 top: -50px;
+                padding: 0;
             }
             .tuileInfo {
                 width: 233px;
