fallback color header

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -16,7 +16,7 @@
         }
 
         table, table td {
-            border: 1px solid black;
+            /*border: 1px solid black;*/
         }
         table {
             color: #354052;
@@ -24,7 +24,7 @@
         }
         .header {
             height: 400px;
-            background: no-repeat center/cover url("../img/background_opt.jpg");
+            background: #131e58 url("../img/background_opt.jpg") no-repeat center/cover;
         }
         .container {
             width: 100%;
