réseaux fill currentColor

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -64,7 +64,7 @@
         .reseau {
             width: 64px;
             height: 32px;
-            fill: #354052;
+            fill: currentColor;
         }
         @media screen and (min-width: 768px) {
             .header {
