--- a/email/email_party.html
+++ b/email/email_party.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="fr">
 <head>
     <meta charset="utf8"/>
@@ -168,7 +168,7 @@
                         <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 20px 0;">
                             <tr>
                                 <td>
-                                    <h2 style="font-size: 30px;">La meilleur soirée étudiante de Noël à Gap, avec en guest stars 4 navigatrices !</h2>
+                                    <h2 style="font-size: 30px;">La meilleure soirée étudiante de Noël à Gap, avec en guest stars 4 navigatrices !</h2>
                                 </td>
                             </tr>
                         </table>
