propriétés background éclatées

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -24,7 +24,11 @@
         }
         .header {
             height: 400px;
-            background: #131e58 url("../img/background_opt.jpg") no-repeat center/cover;
+            background-color: #131e58;
+            background-image: url("../img/background_opt.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
         }
         .container {
             width: 100%;
