width des table en attribut html

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -16,7 +16,7 @@
         }
 
         table, table td {
-            /*border: 1px solid black;*/
+            border: 1px solid black;
         }
         table {
             color: #354052;
@@ -91,10 +91,10 @@
         }
     </style>
 
-<table cellpadding="0" cellspacing="0" style="width: 100%; font-family: Arial;">
+<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial;">
     <tr>
         <td class="header" align="center">
-            <table cellpadding="0" cellspacing="0" style="width: 100%; height: 100%; max-width: 700px; padding: 200px 20px 0 20px; color: #fff; background-color: initial; text-align: right">
+            <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 200px 20px 0 20px; color: #fff; background-color: initial; text-align: right">
                 <tr>
                     <td height="200">
                         <h1 style="font-family: 'Arial Black', sans-serif; font-size: 60px; line-height: 1;">XMAS PARTY</h1>
@@ -106,10 +106,10 @@
     </tr>
     <tr>
         <td align="center">
-            <table class="container" cellpadding="0" cellspacing="0" style=" width: 100%; max-width: 700px; text-align: center">
+            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="max-width: 700px; text-align: center">
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" style=" width: 100%; padding: 20px 0;">
+                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0;">
                             <tr>
                                 <td>
                                     <h2 style="font-size: 20px; line-height: 4">!! PLACES LIMITÉES !!</h2>
@@ -120,7 +120,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><table cellpadding="0" cellspacing="0" style="width: 100%;">
+                    <td><table cellpadding="0" cellspacing="0" width="100%">
                         <tr align="center">
                             <td><!--
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
@@ -169,7 +169,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 20px 0;">
+                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0;">
                             <tr>
                                 <td>
                                     <h2 style="font-size: 30px;">La meilleure soirée étudiante de Noël à Gap, avec en guest stars 4 navigatrices !</h2>
@@ -180,7 +180,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" style="width: 100%;">
+                        <table cellpadding="0" cellspacing="0" width="100%">
                             <tr align="center">
                                 <td><!--
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
@@ -242,7 +242,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 20px 0">
+                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0">
                             <tr align="center">
                                 <td>
                                     <a class="bouton" href="#">Inscription sur @miw05</a>
@@ -256,7 +256,7 @@
     </tr>
     <tr>
         <td align="center">
-            <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 50px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
+            <table cellpadding="0" cellspacing="0" width="100%" style="padding: 50px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td>
                         <a href="#"><svg class="reseau"><use xlink:href="#facebook"></use></svg></a>
