header en tableaux

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -31,8 +31,6 @@
             background-size: cover;
         }
         .container {
-            width: 100%;
-            font-family: Arial, sans-serif;
             padding: 16px;
         }
         .tuileInfo {
@@ -91,15 +89,19 @@
         }
     </style>
 
-<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial;">
+<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
     <tr>
         <td class="header" align="center">
-            <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 200px 20px 0 20px; color: #fff; background-color: initial; text-align: right">
+            <table cellpadding="0" cellspacing="0" width="100%" style="height: 100%; max-width: 700px; padding: 0 20px; color: #fff; background-color: initial; text-align: right">
+                <tr height="200">
+                </tr>
+                <tr height="150" >
+                    <td style="font-family: 'Arial Black', sans-serif; font-size: 60px; line-height: 1;">XMAS PARTY</td>
+                </tr>
+                <tr height="1">
+                    <td style="font-size: 30px;">Jeu. 19 déc. à GAP</td>
+                </tr>
                 <tr>
-                    <td height="200">
-                        <h1 style="font-family: 'Arial Black', sans-serif; font-size: 60px; line-height: 1;">XMAS PARTY</h1>
-                        <p style="font-size: 30px; padding-top: 15px;">Jeu. 19 déc. à GAP</p>
-                    </td>
                 </tr>
             </table>
         </td>
@@ -111,10 +113,10 @@
                     <td>
                         <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0;">
                             <tr>
-                                <td>
-                                    <h2 style="font-size: 20px; line-height: 4">!! PLACES LIMITÉES !!</h2>
-                                    <h2 style="font-size: 30px;">À La + Grosse Soirée Étudiante</h2>
-                                </td>
+                                <td style="font-size: 20px; line-height: 4">!! PLACES LIMITÉES !!</td>
+                            </tr>
+                            <tr>
+                                <td style="font-size: 30px;">À La + Grosse Soirée Étudiante</td>
                             </tr>
                         </table>
                     </td>
