--- a/email/email_party.html
+++ b/email/email_party.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf8"/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
     <style>
