--- a/email/email_party.html
+++ b/email/email_party.html
@@ -128,7 +128,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto"><use xlink:href="#map"></use></svg>
+                                        <svg class="picto" width="42" height="42"><use xlink:href="#map"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -142,7 +142,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto"><use xlink:href="#play"></use></svg>
+                                        <svg class="picto" width="42" height="42"><use xlink:href="#play"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -154,7 +154,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto"><use xlink:href="#map"></use></svg>
+                                        <svg class="picto" width="42" height="42"><use xlink:href="#map"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -188,7 +188,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-edge.jpg" alt="Photo de Miss Edge" height="270"/>
+                                            <img src="../img/miss-edge.jpg" alt="Photo de Miss Edge" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -201,7 +201,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-firefox.jpg" alt="Photo de Miss Firefox" height="270"/>
+                                            <img src="../img/miss-firefox.jpg" alt="Photo de Miss Firefox" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -214,7 +214,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-opera.jpg" alt="Photo de Miss Opera" height="270"/>
+                                            <img src="../img/miss-opera.jpg" alt="Photo de Miss Opera" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -227,7 +227,7 @@
                                 --><table cellpadding="0" cellspacing="0" class="tuileMiss">
                                     <tr>
                                         <td style="padding-bottom: 11px">
-                                            <img src="../img/miss-safari.jpg" alt="Photo de Miss Safari" height="270"/>
+                                            <img src="../img/miss-safari.jpg" alt="Photo de Miss Safari" width="182" height="270"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -261,9 +261,9 @@
             <table cellpadding="0" cellspacing="0" width="100%" style="padding: 50px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td>
-                        <a href="#"><svg class="reseau"><use xlink:href="#facebook"></use></svg></a>
-                        <a href="#"><svg class="reseau"><use xlink:href="#twitter"></use></svg></a>
-                        <a href="#"><svg class="reseau"><use xlink:href="#instagram"></use></svg></a>
+                        <a href="#"><svg class="reseau" width="64" height="32"><use xlink:href="#facebook"></use></svg></a>
+                        <a href="#"><svg class="reseau" width="64" height="32"><use xlink:href="#twitter"></use></svg></a>
+                        <a href="#"><svg class="reseau" width="64" height="32"><use xlink:href="#instagram"></use></svg></a>
                     </td>
                 </tr>
                 <tr>
