suppression .picto et .reseau

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -45,10 +45,6 @@
             text-align: center;
             font-size: 20px;
         }
-        .picto {
-            width: 42px;
-            height: 42px;
-        }
         a {
             color: inherit;
         }
@@ -62,11 +58,6 @@
             border-radius: 10px;
             font-weight: bold;
             font-size: 20px;
-        }
-        .reseau {
-            width: 64px;
-            height: 32px;
-            fill: currentColor;
         }
         @media screen and (min-width: 768px) {
             .header {
@@ -128,7 +119,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto" width="42" height="42"><use xlink:href="#map"></use></svg>
+                                        <svg width="42" height="42"><use xlink:href="#map"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -142,7 +133,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto" width="42" height="42"><use xlink:href="#play"></use></svg>
+                                        <svg width="42" height="42"><use xlink:href="#play"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -154,7 +145,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg class="picto" width="42" height="42"><use xlink:href="#map"></use></svg>
+                                        <svg width="42" height="42"><use xlink:href="#map"></use></svg>
                                     </td>
                                 </tr>
                                 <tr>
@@ -261,9 +252,9 @@
             <table cellpadding="0" cellspacing="0" width="100%" style="padding: 50px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td>
-                        <a href="#"><svg class="reseau" width="64" height="32"><use xlink:href="#facebook"></use></svg></a>
-                        <a href="#"><svg class="reseau" width="64" height="32"><use xlink:href="#twitter"></use></svg></a>
-                        <a href="#"><svg class="reseau" width="64" height="32"><use xlink:href="#instagram"></use></svg></a>
+                        <a href="#"><svg width="64" height="32" fill="#C30078"><use xlink:href="#facebook"></use></svg></a>
+                        <a href="#"><svg width="64" height="32" fill="#C30078"><use xlink:href="#twitter"></use></svg></a>
+                        <a href="#"><svg width="64" height="32" fill="#C30078"><use xlink:href="#instagram"></use></svg></a>
                     </td>
                 </tr>
                 <tr>
