--- a/email/email_party.html
+++ b/email/email_party.html
@@ -252,9 +252,9 @@
             <table cellpadding="0" cellspacing="0" width="100%" style="padding: 50px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td>
-                        <a href="#"><svg width="64" height="32" fill="#C30078"><use xlink:href="#facebook"></use></svg></a>
-                        <a href="#"><svg width="64" height="32" fill="#C30078"><use xlink:href="#twitter"></use></svg></a>
-                        <a href="#"><svg width="64" height="32" fill="#C30078"><use xlink:href="#instagram"></use></svg></a>
+                        <a href="#"><svg width="64" height="32" fill="#354052"><use xlink:href="#facebook"></use></svg></a>
+                        <a href="#"><svg width="64" height="32" fill="#354052"><use xlink:href="#twitter"></use></svg></a>
+                        <a href="#"><svg width="64" height="32" fill="#354052"><use xlink:href="#instagram"></use></svg></a>
                     </td>
                 </tr>
                 <tr>
