--- a/email/email_party.html
+++ b/email/email_party.html
@@ -119,7 +119,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg width="42" height="42"><use xlink:href="#map"></use></svg>
+                                        <img width="42" height="42" src="../img/map.png" alt="Lieu, date et heure de la soirée"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -133,7 +133,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg width="42" height="42"><use xlink:href="#play"></use></svg>
+                                        <img width="42" height="42" src="../img/play.png" alt="Styles de musique joués"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -145,7 +145,7 @@
                             --><table cellpadding="0" cellspacing="0" class="tuileInfo">
                                 <tr>
                                     <td style="padding-bottom: 11px">
-                                        <svg width="42" height="42"><use xlink:href="#map"></use></svg>
+                                        <img width="42" height="42" src="../img/euro.png" alt="Prix de l'entrée"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -248,15 +248,21 @@
         </td>
     </tr>
     <tr>
-        <td align="center">
-            <table cellpadding="0" cellspacing="0" width="100%" style="padding: 50px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
+        <td align="center" style="padding: 20px 0; background-color: #F5F5F5;">
+            <table cellpadding="0" cellspacing="0" width="192px" style="padding: 20px 0; line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
-                    <td>
-                        <a href="#"><svg width="64" height="32" fill="#354052"><use xlink:href="#facebook"></use></svg></a>
-                        <a href="#"><svg width="64" height="32" fill="#354052"><use xlink:href="#twitter"></use></svg></a>
-                        <a href="#"><svg width="64" height="32" fill="#354052"><use xlink:href="#instagram"></use></svg></a>
+                    <td width="64">
+                        <a href="#"><img width="32" height="32" src="../img/facebook.png" alt="Facebook"/></a>
+                    </td>
+                    <td width=64>
+                        <a href="#"><img width="32" height="32" src="../img/twitter.png" alt="Twitter"/></a>
+                    </td>
+                    <td width="64">
+                        <a href="#"><img width="32" height="32" src="../img/instagram.png" alt="Instagram"/></a>
                     </td>
                 </tr>
+            </table>
+            <table cellpadding="0" cellspacing="0" width="100%" style="line-height: 2; background-color: #F5F5F5; text-align: center">
                 <tr>
                     <td>
                         Copyright © 2020 <b>MIW’x</b>. All Rights Reserved.
@@ -276,17 +282,6 @@
         </td>
     </tr>
 </table>
-
-<div hidden>
-    <svg xmlns="http://www.w3.org/2000/svg">
-        <symbol id="euro" viewBox="0 0 28.391 39.5"><defs><style>.a{fill:#c30078;}</style></defs><g transform="translate(-56.528)"><path class="a" d="M84.891,37.538l-.982-4.46a.855.855,0,0,0-.421-.589.837.837,0,0,0-.729-.056l-.141.056-.337.084c-.15.037-.323.079-.519.126s-.425.093-.687.14-.538.089-.827.126-.6.07-.939.1-.673.042-1.01.042a11.293,11.293,0,0,1-10.6-7.126H78.55a.907.907,0,0,0,.869-.73l.673-3.142a.912.912,0,0,0-.168-.757.877.877,0,0,0-.7-.337H66.347a25.237,25.237,0,0,1,0-2.946h13.69a.819.819,0,0,0,.9-.729l.673-3.2a.92.92,0,0,0-.9-1.066H67.581A11.083,11.083,0,0,1,71.79,8.136a11.507,11.507,0,0,1,6.34-1.8,2.5,2.5,0,0,1,.827.028,6.394,6.394,0,0,0,.814.07,4.7,4.7,0,0,1,.729.084l.632.1.491.1c.141.028.248.051.323.07l.112.028a.8.8,0,0,0,.673-.07.823.823,0,0,0,.393-.547L84.33,1.74a.931.931,0,0,0-.084-.673,1.066,1.066,0,0,0-.562-.421A22.373,22.373,0,0,0,78.242,0,18.661,18.661,0,0,0,67.006,3.591a18.277,18.277,0,0,0-6.831,9.482H57.426a.864.864,0,0,0-.9.9v3.2a.864.864,0,0,0,.9.9h1.88q-.085,1.347-.028,2.946H57.426a.91.91,0,0,0-.9.9v3.17a.909.909,0,0,0,.9.9h2.665a18.116,18.116,0,0,0,6.677,9.861A18.663,18.663,0,0,0,78.242,39.5c.356,0,.716-.009,1.08-.028s.706-.047,1.024-.084.631-.079.94-.126.589-.093.841-.141.491-.093.715-.14.426-.1.6-.155.327-.1.449-.125a1.381,1.381,0,0,0,.294-.1l.141-.028a.881.881,0,0,0,.477-.407A.823.823,0,0,0,84.891,37.538Z" transform="translate(0 0)"/></g></symbol>
-        <symbol id="map" viewBox="0 0 30.516 42"><defs><style>.a{fill:#c30078;}</style></defs><g transform="translate(-70.573)"><g transform="translate(70.573)"><path class="a" d="M85.831,0A15.252,15.252,0,0,0,70.573,15.211c0,10.409,13.655,25.69,14.236,26.335a1.377,1.377,0,0,0,2.045,0c.581-.645,14.236-15.926,14.236-26.335A15.252,15.252,0,0,0,85.831,0Zm0,22.864a7.653,7.653,0,1,1,7.677-7.653A7.673,7.673,0,0,1,85.831,22.864Z" transform="translate(-70.573)"/></g></g></symbol>
-        <symbol id="play" viewBox="0 0 42 42"><defs><style>.a{fill:#c30078;}</style></defs><path class="a" d="M21,0A21,21,0,1,0,42,21,21.024,21.024,0,0,0,21,0ZM31.894,21.578l-15.4,10.5a.7.7,0,0,1-.394.122.7.7,0,0,1-.7-.7v-21a.7.7,0,0,1,1.095-.578l15.4,10.5a.7.7,0,0,1,0,1.156Z"/></symbol>
-        <symbol id="facebook" viewBox="0 0 24 24"><title>facebook</title><path d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z"/></symbol>
-        <symbol id="twitter" viewBox="0 0 512 512"><title>twitter</title><path d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016 c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992 c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056 c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152 c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792 c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44 C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568 C480.224,136.96,497.728,118.496,512,97.248z"/></symbol>
-        <symbol id="instagram" viewBox="0 0 512 512"><title>instagram</title><g><g><path d="M352,0H160C71.648,0,0,71.648,0,160v192c0,88.352,71.648,160,160,160h192c88.352,0,160-71.648,160-160V160 C512,71.648,440.352,0,352,0z M464,352c0,61.76-50.24,112-112,112H160c-61.76,0-112-50.24-112-112V160C48,98.24,98.24,48,160,48 h192c61.76,0,112,50.24,112,112V352z"/></g></g><g><g><path d="M256,128c-70.688,0-128,57.312-128,128s57.312,128,128,128s128-57.312,128-128S326.688,128,256,128z M256,336 c-44.096,0-80-35.904-80-80c0-44.128,35.904-80,80-80s80,35.872,80,80C336,300.096,300.096,336,256,336z"/></g></g><g><g><circle cx="393.6" cy="118.4" r="17.056"/></g></g></symbol>
-    </svg>
-</div>
 
 </body>
 </html>
